# Damm-EHUB

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LINEWISE_API_CONTRACT.md  Makefile  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml
.claude/: settings.local.json
apps/damm-mobile/: app.json  package-lock.json  package.json
apps/landing/: README.md  astro.config.mjs  package-lock.json  (+2 more)
data/: README.md
data_experiment/: evaluation_all_windows.csv
docs/: contracts.md  future_improvements.md  getting-started.md  index.md  mcp-servers.md  onboarding.md
scripts/: analyze_low_oee_pairs.py  visualize_low_oee_pairs.py
services/api/: .env.example  Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py
services/api/app/: main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: auth.py  hello.py  linewise.py  linewise_chat.py  permissions.py  roles.py  users.py
services/api/app/core/: config.py  dependencies.py  opa.py  redis.py  security.py
services/api/app/models/: __init__.py  associations.py  base.py  permission.py  role.py  user.py
services/api/app/schemas/: auth.py  linewise.py  linewise_chat.py  permission.py  role.py  token.py  user.py
services/api/app/services/: auth_service.py  linewise_orchestrator.py  permission_service.py  role_service.py  user_service.py
services/api/tests/: conftest.py  test_auth.py  test_linewise_chat.py  test_linewise_integration.py  test_permissions.py  test_roles.py  test_users.py
(+192 files in other folders)
